--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "displayName": "Prefab Painter",
     "version": "1.0.0",
     "unity": "2018.3",
-    "description": "",
+    "description": "A free prefab painter.",
     "category": "Unity"
 }
