Renamed package name from 'com' to 'me'.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.ameye.prefab-painter",
+    "name": "me.ameye.prefab-painter",
     "displayName": "Prefab Painter",
     "version": "0.1.0",
     "unity": "2018.1",
