--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
     "version": "0.1.0",
     "unity": "2018.1",
     "description": "A free prefab painter.",
-    "category": "Unity"
+    "keywords": [
+        "prefab painter",
+        "tools",
+        "editor",
+        "unity"
+    ],
+    "category": "Editor"
 }
