Fix Build issue

--- a/Scripts/ameye.prefabpainter.asmdef
+++ b/Scripts/ameye.prefabpainter.asmdef
@@ -2,7 +2,9 @@
     "name": "ameye.prefabpainter",
     "references": [],
     "optionalUnityReferences": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
