Add prefab list

--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
-    "name": "me.ameye.prefab-painter",
+    "name": "com.ameye.prefab-painter",
     "displayName": "Prefab Painter",
-    "version": "0.1.0",
-    "unity": "2018.1",
+    "version": "1.2.0",
+    "unity": "2018.3",
     "description": "A free prefab painter.",
-    "keywords": [
-        "prefab painter",
-        "tools",
-        "editor",
-        "unity"
-    ],
-    "category": "Editor"
+    "category": "Unity"
 }
