Improved palette functionality

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "com.ameye.prefab-painter",
+    "name": "me.ameye.prefab-painter",
     "displayName": "Prefab Painter",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "unity": "2018.3",
     "description": "A free prefab painter.",
     "category": "Unity"
